# aws-lambda-example

./: README.md  main.py  pyproject.toml
src/: alphavantage_data.py  metrics.py  montecarlo_api.py  montecarlo_model.py  montecarlo_optimisation.py  new.py  utility.py
src/AlphaVantage/: __init__.py  alphavantage_data.py
src/MonteCarlo/: __init__.py  monte_carlo.py  monte_carlo_simulation.py
tests/: test_montecarlo_simulation.py
