[tool.poetry]
name = "mpt_montecarlo_simulation"
version = "1.0.0"
description = ""
authors = ["cjarno <https://github.com/cjarno>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11"
pandas = "^2.2"
numpy = "^2.2"
loguru = "^0.7"
requests = "^2.32"
dotenv = "^0.9"
pyarrow = "^20.0"
scipy = "^1.15"
dash = "^3.0.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
